# ChangeLog for sys-devel/make
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/make/ChangeLog,v 1.15 2004/04/10 07:12:49 kumba Exp $

  10 Apr 2004; Joshua Kinard <kumba@gentoo.org> make-3.79.1-r5.ebuild:
  Marked stable on mips, and added gnuconfig for mips64 hosts.

  21 Mar 2004; Joshua Kinard <kumba@gentoo.org> make-3.80.ebuild:
  Added gnuconfig support for mips64 hosts

  02 Mar 2004; Brian Jackson <iggy@gentoo.org> make-3.80.ebuild:
  adding initial s390 support

*make-3.80 (14 Oct 2002)

  17 Sep 2003; Jon Portnoy <avenj@gentoo.org> make-3.80.ebuild :
  ia64 keywords.

  06 Jul 2003; Joshua Kinard <kumba@gentoo.org> make-3.80.ebuild:
  Added "mips" to KEYWORDS (works for me)

  18 Feb 2003; Zach Welch <zwelch@gentoo.org> make-3.80.ebuild :
  Added arm to keywords.
  
  09 Feb 2003; Guy Martin <gmsoft@gentoo.org> make-3.80.ebuild :
  Added hppa to keywords.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : 
  changed sparc ~sparc keywords
 
  14 Oct 2002; Martin Schlemmer <azarah@gentoo.org> :

  Update version.

*make-3.79.1-r5 (29 Sep 2002)

  29 Sep 2002; Martin Schlemmer <azarah@gentoo.org> :

  Install gmake as symlink to make for compat reasons.
  Closes bug #8487.

*make-3.79.1-r4 (07 Aug 2002)

  18 Jan 2003; Jan Seidel <tuxus@gentoo.org> :
  Added mips to keywords

  07 Aug 2002; Martin Schlemmer <azarah@gentoo.org> :

  Do not install make sgid.  Resolves bug #4056.

*make-3.79.1-r3 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.